rust/node-structuring/tests/snapshots/examples__normalize-citations-invalid-range.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Non-numeric range "
          }
        },
        {
          "type": "CitationGroup",
          "items": [
            {
              "type": "Citation",
              "target": "smith2020",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "Smith 2020"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "jones2021",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "Jones 2021"
                  }
                }
              ]
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": " should not expand."
          }
        }
      ]
    }
  ],
  "structuring": [
    "normalize-citations"
  ]
}
