rust/node-structuring/tests/snapshots/examples__normalize-citations-mixed-brackets.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "First "
          }
        },
        {
          "type": "Citation",
          "target": "ref1",
          "citationMode": "Parenthetical",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "1"
              }
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": " and second "
          }
        },
        {
          "type": "Citation",
          "target": "ref2",
          "citationMode": "Parenthetical",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Smith 2023"
              }
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": " citations."
          }
        }
      ]
    }
  ],
  "structuring": [
    "normalize-citations"
  ]
}
