rust/node-structuring/tests/snapshots/examples__normalize-citations-mixed-separators.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Mixed separators "
          }
        },
        {
          "type": "CitationGroup",
          "items": [
            {
              "type": "Citation",
              "target": "ref1",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "Smith 2020"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref2",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "Jones 2021"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref3",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "Brown 2022"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref4",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "Davis 2023"
                  }
                }
              ]
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": " should group."
          }
        }
      ]
    }
  ],
  "structuring": [
    "normalize-citations"
  ]
}
