rust/node-structuring/tests/snapshots/examples__normalize-citations-multiple-separators.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Multiple commas "
          }
        },
        {
          "type": "CitationGroup",
          "items": [
            {
              "type": "Citation",
              "target": "ref1",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "1"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref2",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "2"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref3",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "3"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref4",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "4"
                  }
                }
              ]
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": " and semicolons "
          }
        },
        {
          "type": "CitationGroup",
          "items": [
            {
              "type": "Citation",
              "target": "ref5",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "5"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref6",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "6"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref7",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "7"
                  }
                }
              ]
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": "."
          }
        }
      ]
    }
  ],
  "structuring": [
    "normalize-citations"
  ]
}
