rust/node-structuring/tests/snapshots/examples__normalize-citations-no-space.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Statement "
          }
        },
        {
          "type": "Citation",
          "target": "ref1",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "1"
              }
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": "continues here."
          }
        }
      ]
    }
  ],
  "structuring": [
    "normalize-citations"
  ]
}
