rust/node-structuring/tests/snapshots/examples__normalize-citations-preserve-modes.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "See "
          }
        },
        {
          "type": "Citation",
          "target": "ref1",
          "citationMode": "Narrative",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Smith 2023"
              }
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": " for details."
          }
        }
      ]
    }
  ],
  "structuring": [
    "normalize-citations"
  ]
}
