rust/node-structuring/tests/snapshots/examples__normalize-citations-semicolon-separated.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Multiple studies "
          }
        },
        {
          "type": "CitationGroup",
          "items": [
            {
              "type": "Citation",
              "target": "smith-2020",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "Smith 2020"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "jones-2021",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "Jones 2021"
                  }
                }
              ]
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": " confirm this."
          }
        }
      ]
    }
  ],
  "structuring": [
    "normalize-citations"
  ]
}
