rust/node-structuring/tests/snapshots/examples__normalize-citations-superscript-extraction.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "A single citation in a superscript"
          }
        },
        {
          "type": "Citation",
          "target": "ref-1",
          "citationMode": "Parenthetical",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "1"
              }
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": ", a pair of citations within superscripts, separated by a comma that is also superscripted"
          }
        },
        {
          "type": "CitationGroup",
          "items": [
            {
              "type": "Citation",
              "target": "ref-2",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "2"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-3",
              "citationMode": "Parenthetical",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "3"
                  }
                }
              ]
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": ", a range of citations, separated by a dash that is also superscripted"
          }
        },
        {
          "type": "CitationGroup",
          "items": [
            {
              "type": "Citation",
              "target": "ref-4",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "4"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-5",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "5"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-6",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "6"
                  }
                }
              ]
            }
          ]
        }
      ]
    }
  ],
  "structuring": [
    "normalize-citations"
  ]
}
